2010-04-02  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_tty.cc (fhandler_tty_slave::close): Avoid potential crash
	if former open call has been unsuccessful.

2010-04-01  Corinna Vinschen  <corinna@vinschen.de>

	* nlsfuncs.cc: Fix indentation.

2010-04-01  Corinna Vinschen  <corinna@vinschen.de>

	* nlsfuncs.cc (rebase_locale_buf): New helper function to rebase
	function pointers in locale structures.  Explain why this is necessary.
	(__set_lc_time_from_win): Use rebase_locale_buf after realloc.
	(__set_lc_numeric_from_win): Ditto.
	(__set_lc_monetary_from_win): Ditto.

2010-03-31  Christopher Faylor  <me+cygwin@cgf.cx>

	* sigproc.cc (wait_sig): Make sure that strace is activated on
	__SIGSTRACE by calling new strace::activate function.
	* strace.cc (strace::activate): Rename from strace::strace.
	* strace.h (strace::activate): Define new function.
	(strace::strace): Call activate.

2010-03-31  Christopher Faylor  <me+cygwin@cgf.cx>

	* fhandler.h (fhandler_base_overlapped): Temporarily (?) make
	select_pipe_info a friend until the fhandler_tty intertangling can be
	worked out.
	* select.cc (select_pipe_info::add_watch_handle): Don't inspect the
	overlapped event if we're not waiting for I/O.
	(fhandler_tty_common::select_*): Change to standard function.  Don't do
	kludgy fhandler_pipe coercion.

2010-03-31  Christopher Faylor  <me+cygwin@cgf.cx>

	* fhandler.cc (fhandler_base::dup): Call setup_overlapped
	unconditionally.
	(fhandler_base::fork_fixup): Ditto.
	(fhandler_base::fixup_after_fork): Ditto.
	(fhandler_base::fixup_after_exec): Ditto.
	(fhandler_base_overlapped::setup_overlapped): Move to this class from
	fhandler_base.
	(handler_base_overlapped::destroy_overlapped): Ditto.
	(fhandler_base_overlapped::wait_overlapped): Ditto.  Track when we
	expect pending I/O.
	(fhandler_base_overlapped::read_overlapped): Move to this class from
	fhandler_base.  Return error if ongoing I/O.
	(fhandler_base_overlapped::write_overlapped): Ditto.